fix remove workout, adding stats images and calculations for progress and levels

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,6 +75,12 @@
     <string name="settings_share_time_preference"><![CDATA[Time & Location]]></string>
     <string name="prefs_key">sharedprefskey</string>
     <string name="initial_input">initial_input</string>
+    <string name="rectusStatLevel">rectusStatLevelPreference</string>
+    <string name="obliquesStatLevel">obliquesStatLevelPreference</string>
+    <string name="transverseStatLevel">transverseStatLevelPreference</string>
+    <string name="rectusStatProgress">rectusStatProgressPreference</string>
+    <string name="obliquesStatProgress">obliquesStatProgressPreference</string>
+    <string name="transverseStatProgress">transverseStatProgressPreference</string>
 
 
 </resources>
